--- a/apps/frontend/app/global.css
+++ b/apps/frontend/app/global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -197,9 +200,9 @@
 }
 
 .root-sidebar .main-nav-icon.active {
-  @apply text-indigo-500 bg-indigo-50 dark:bg-indigo-50/10;
-  @apply hover:text-indigo-600 hover:bg-indigo-50;
-  @apply dark:hover:text-indigo-400 dark:hover:bg-indigo-50/20;
+  @apply text-powernews-primary bg-powernews-primary/10 dark:bg-powernews-primary/20;
+  @apply hover:text-powernews-primary hover:bg-powernews-primary/20;
+  @apply dark:hover:text-powernews-secondary dark:hover:bg-powernews-primary/30;
 }
 
 .side-nav {
@@ -211,7 +214,7 @@
 .side-nav .side-title {
   @apply uppercase text-xs font-medium text-gray-500 px-3 py-2 mx-1.5;
   @apply flex justify-between items-center rounded-md;
-  @apply hover:text-indigo-500;
+  @apply hover:text-powernews-primary;
 }
 
 .side-nav .section {
@@ -256,9 +259,8 @@
 }
 
 .nav .nav-item.active {
-  @apply bg-indigo-50 text-indigo-600;
-  /* @apply bg-zinc-100 text-gray-600; */
-  @apply dark:bg-indigo-50/10 dark:text-indigo-400;
+  @apply bg-powernews-primary/10 text-powernews-primary;
+  @apply dark:bg-powernews-primary/20 dark:text-powernews-secondary;
 }
 
 .tab {
@@ -271,8 +273,8 @@
 }
 
 .tab-item.active {
-  @apply border-indigo-400 text-indigo-700;
-  @apply dark:border-indigo-300 text-indigo-400;
+  @apply border-powernews-primary text-powernews-primary;
+  @apply dark:border-powernews-secondary dark:text-powernews-secondary;
 }
 
 .sign-page {
@@ -290,7 +292,7 @@
 }
 
 .droppable {
-  @apply border-indigo-400 bg-indigo-100;
+  @apply border-powernews-secondary bg-powernews-secondary/20;
 }
 
 .droppable * {
